# networkAdapter

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  debBuild.sh
c++/: CMakeLists.txt
c++/endianConversion/: CMakeLists.txt
c++/endianConversion/cmake/: endianConversion-config.cmake  endianconversion-config.cmake
c++/endianConversion/include/: EndianOrder.h  HostOrder.h  Member.h  Meta.h  Meta.inl  NetOrder.h
c++/endianConversion/include/detail/: EndianConvert.h  EndianConverter.h  EndianMembers.h  EndianMeta.h  EndianMeta.inl  MetaHolder.h  template_helpers.h  template_helpers.inl
c++/networkAdapter/: CMakeLists.txt
c++/networkAdapter/cmake/: networkadapter-config.cmake
c++/networkAdapter/include/: BaseSocket.hpp  IpAddress.hpp
c++/networkAdapter/include/Lookup/: HostLookup.hpp  InterfacesLookup.hpp
c++/networkAdapter/include/Tcp/: TcpClient.hpp  TcpDataLink.hpp  TcpServer.hpp
c++/networkAdapter/include/Udp/: UdpClient.hpp  UdpDataLink.hpp  UdpServer.hpp
c++/networkAdapter/src/Tcp/: TcpDataLink.cpp
c++/networkAdapter/src/Udp/: UdpClient.cpp  UdpDataLink.cpp  UdpServer.cpp
c++/networkingAdapter/: CMakeLists.txt
c++/networkingAdapter/cmake/: networkingAdapter-config.cmake  networkingadapter-config.cmake
c++/networkingAdapter/include/: BaseDataLink.hpp  BaseSocket.hpp  HostName.h  IpAddress.hpp  NetAdapter.hpp  NetworkOrder.h
c++/networkingAdapter/include/Dgram/: DgramClient.hpp  DgramDataLink.hpp  DgramServer.hpp
c++/networkingAdapter/include/Lookup/: HostLookup.hpp  InterfacesLookup.hpp
c++/networkingAdapter/include/Stream/: StreamClient.hpp  StreamDataLink.hpp  StreamServer.hpp
c++/networkingAdapter/include/Tcp/: TcpClient.hpp  TcpDataLink.hpp  TcpServer.hpp
c++/networkingAdapter/include/Udp/: UdpClient.hpp  UdpDataLink.hpp  UdpServer.hpp
c++/networkingAdapter/include/dgram/: DgramClient.hpp  DgramDataLink.hpp  DgramServer.hpp
c++/networkingAdapter/include/stream/: DataSocket.hpp  DataSocket.inl  StreamClient.hpp  StreamDataLink.hpp  StreamServer.hpp
c++/networkingAdapter/src/: BaseDataLink.cpp  BaseSocket.cpp  HostLookup.cpp  HostName.cpp  IpAddress.cpp
c++/networkingAdapter/src/Dgram/: DgramClient.cpp  DgramDataLink.cpp  DgramServer.cpp
c++/networkingAdapter/src/Lookup/: HostLookup.cpp  InterfacesLookup.cpp  stest.cpp
c++/networkingAdapter/src/Stream/: StreamClient.cpp  StreamDataLink.cpp  StreamServer.cpp
c++/networkingAdapter/src/Tcp/: TcpClient.cpp  TcpDataLink.cpp  TcpServer.cpp
c++/networkingAdapter/src/Udp/: UdpClient.cpp  UdpDataLink.cpp  UdpServer.cpp
c++/networkingAdapter/src/dgram/: DgramClient.cpp  DgramDataLink.cpp  DgramServer.cpp
c++/networkingAdapter/src/stream/: DataSocket.cpp  StreamClient.cpp  StreamDataLink.cpp  StreamServer.cpp
container/: Dockerfile  build_dependencies.sh  build_netadapter.sh  import_dependencies.sh
container/configs/: nginx-default.conf  reprepro-distributions
debian/: changelog  control  copyright  networkingadapter-dev.install  rules
examples/: CMakeLists.txt
examples/EXA_HostName/: CMakeLists.txt  main.cpp
examples/EXA_InterfaceLookup/: CMakeLists.txt  main.cpp
examples/EXA_Tcp/: CMakeLists.txt
examples/EXA_Tcp/EXA_TcpClient/: CMakeLists.txt  TcpClient.cpp
examples/EXA_Tcp/EXA_TcpServer/: CMakeLists.txt  TcpServer.cpp
examples/EXA_Tcp/TcpClient/: CMakeLists.txt
examples/EXA_Tcp/TcpServer/: CMakeLists.txt
examples/EXA_Udp/: CMakeLists.txt
examples/EXA_Udp/UdpClient/: CMakeLists.txt  UdpClient.cpp
examples/EXA_Udp/UdpServer/: CMakeLists.txt  UdpServer.cpp
examples/EXA_UdpBroadcast/client/: CMakeLists.txt  broadClient.cpp
examples/EXA_UdpBroadcast/server/: CMakeLists.txt  broadServer.cpp
examples/InterfaceLookup/: main.cpp
examples/Proto/: CMakeLists.txt  ComProto.hpp
examples/dgram/: CMakeLists.txt
examples/dgram/dgramClient/: CMakeLists.txt  dgramClient.cpp  i6d_ucase_cl.cpp
examples/dgram/dgramServer/: CMakeLists.txt  dgramServer.cpp  error_functions.h  get_num.h  i6d_ucase_sv.cpp
examples/dgramBroadcast/client/: CMakeLists.txt  broadClient.cpp
examples/dgramBroadcast/server/: broadServer.cpp
examples/stream/: CMakeLists.txt
examples/stream/streamClient/: CMakeLists.txt  streamClient.cpp
examples/stream/streamServer/: CMakeLists.txt  streamServer.cpp
scripts/: 010_create_build_container.sh  020_docker_build_depend.sh  020_setup_build_dependencies.sh  021_docker_import_depend.sh  030_docker_build_netadapter.sh  030_docker_run_interactive.sh  040_docker_run_interactive.sh  100_pbuilder_start_debmirror.sh  200_pbuilder_debmirror_localhost.sh  210_create_basetgz_tomhp.sh  300_build_deb_package.sh  400_create_tag.sh  ContainerCommon.sh  buildPackage.sh  common.sh  createChroot.sh
tests/: CMakeLists.txt
tests/TST_Common/: CMakeLists.txt  main.cpp
tests/TST_DataLink/: CMakeLists.txt  main.cpp
tests/TST_DgramConnection/: CMakeLists.txt  main.cpp
tests/TST_DgramDataLink/: CMakeLists.txt  main.cpp
tests/TST_EndianConversion/: CMakeLists.txt  SwapEndian.h  helper.cpp  main.cpp
tests/TST_IpAddress/: CMakeLists.txt  main.cpp
tests/TST_StreamConnection/: CMakeLists.txt  main.cpp
tests/TST_TcpConnection/: CMakeLists.txt  main.cpp
tests/TST_UdpConnection/: CMakeLists.txt  main.cpp
tests/TST_UdpDataLink/: CMakeLists.txt  main.cpp
tests/TST_baseSocket/: CMakeLists.txt  main.cpp
tests/TST_baseSocket/helper/: SocketImpl.hpp
